# g4cgal

./: .gitignore  CMakeLists.txt  README.md
include/: G4BooleanProcessorCGAL.hh  G4HalfSpaceAARBox.hh  G4HalfSpacePlane.hh  G4HalfSpaceSolid.hh  G4HalfSpaceSphere.hh  G4HalfSpaceZone.hh  G4PrimitiveLocatorCGAL.hh  G4PrimitiveLocatorG4.hh  G4Shader.hh  G4SolidTrackingTimer.hh  G4SurfaceMeshCGAL.hh  G4SurfaceMeshSolid.hh  G4VHalfSpace.hh  G4VHalfSpaceReader.hh  G4VPrimitiveLocator.hh  G4VSurfaceMesh.hh
src/: G4BooleanProcessorCGAL.cc  G4HalfSpaceAARBox.cc  G4HalfSpacePlane.cc  G4HalfSpaceSolid.cc  G4HalfSpaceSphere.cc  G4HalfSpaceXACircularCylinder.cc  G4HalfSpaceXAEllipticalCylinder.cc  G4HalfSpaceYACircularCylinder.cc  G4HalfSpaceZACircularCylinder.cc  G4HalfSpaceZone.cc  G4PrimitiveLocator.cc  G4PrimitiveLocatorCGAL.cc  G4PrimitiveLocatorG4.cc  G4SolidTrackingTimer.cc  G4SurfaceMeshCGAL.cc  G4SurfaceMeshSolid.cc  G4VHalfSpace.cc  G4VSurfaceMesh.cc
test/cgal/: cgal.cc
test/half_space/: CGALActionInitialization.cc  CGALActionInitialization.hh  CGALDetectorConstruction.cc  CGALDetectorConstruction.hh  CGALPrimaryGeneratorAction.cc  CGALPrimaryGeneratorAction.hh  G4BoxInstrumented.cc  half_space.cc
test/load_gdml/: G01PrimaryGeneratorAction.cc  load_gdml.cc
test/surface_mesh/: SurfaceMesh_ActionInitialization.cc  SurfaceMesh_ActionInitialization.hh  SurfaceMesh_DetectorConstruction.cc  SurfaceMesh_DetectorConstruction.hh  SurfaceMesh_PrimaryGeneratorAction.cc  SurfaceMesh_PrimaryGeneratorAction.hh  surface_mesh.cc
